YAML/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: food-app
  namespace: food-app

spec:

  replicas: 2

  selector:

    matchLabels:

      app: food-app

  template:

    metadata:

      labels:

        app: food-app

    spec:

      containers:

      - name: food-app

        image: yourdockerhubusername/food-app:latest

        ports:

        - containerPort: 8080

        resources:

          requests:
            cpu: "200m"
            memory: "256Mi"

          limits:
            cpu: "500m"
            memory: "512Mi"
