YAML/app-service.yaml
apiVersion: v1
kind: Service

metadata:

  name: food-service

  namespace: food-app

spec:

  selector:

    app: food-app

  ports:

  - port: 80

    targetPort: 8080

  type: NodePort
