YAML/network-policy.yaml
apiVersion: networking.k8s.io/v1

kind: NetworkPolicy

metadata:

  name: allow-app-to-db

  namespace: food-app

spec:

  podSelector:

    matchLabels:

      app: mysql

  ingress:

  - from:

    - podSelector:

        matchLabels:

          app: food-app
